fix layout bug in bottom sheet

--- a/views/themes/banner_editor/assets/stylesheets/banner_editor/banner_editor.scss
+++ b/views/themes/banner_editor/assets/stylesheets/banner_editor/banner_editor.scss
@@ -70,7 +70,7 @@
 }
 
 .qor-fieldset-bannereditor {
-    padding: 0;
+    padding: 0 !important;
     &.qor-sortable__item {
         padding: 0 !important;
         margin-bottom: 24px !important;
